alignement fixes

--- a/src/styles/photos.scss
+++ b/src/styles/photos.scss
@@ -6,14 +6,12 @@
 }
 .imageContainer {
   display: flex;
-  //   position: relative;
-  //   flex: 10%;
 
   width: 100%;
   flex-wrap: wrap;
   margin: 0 auto;
   justify-content: center;
-  //   align-items: baseline;
+  align-items: center;
 
   //   margin: 0 10%;
   padding-top: 10%;
